--- a/docs/tutorials/deployment/index.mdx
+++ b/docs/tutorials/deployment/index.mdx
@@ -12,9 +12,17 @@ This tutorial is a community contribution and is not supported by the Open WebUI
 :::
 
 :::info
-# 📢 **Calling all YouTubers!**
+# 📢 **Calling all YouTubers and Content Creators!**
 We're looking for talented individuals to create videos showcasing Open WebUI's features. If you make a video, we'll feature it at the top of our guide section!
 :::
+
+## Articles
+
+- Learn how to deploy Open WebUI 100% secure through https: [Deploy Your Own Open WebUI Interface with HTTPS Security](https://henrynavarro.org/deploy-your-own-open-webui-interface-with-https-security-53a6ea2609d7?sk=a5876acd56b44ea60f10f9b13aa24aee) (Medium article by @hdnh2006)
+
+- Google Drive integration in Open WebUI interface tutorial: [How to integrate Google Drive with Open WebUI](https://henrynavarro.org/how-to-integrate-google-drive-with-open-webui-e525c8f3f82e?sk=a9f48cd1590e3e8dca052f7fe9f12765) (Medium article by @hdnh2006)
+
+## Videos
 
 <iframe
   width="560"
@@ -150,6 +158,16 @@ We're looking for talented individuals to create videos showcasing Open WebUI's 
   width="560"
   height="315"
   src="https://www.youtube-nocookie.com/embed/CcGrI9YkUJI?si=YGdmDlz268MAxmkn"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+  allowfullscreen
+></iframe>
+
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube-nocookie.com/embed/cGBjAned72A?si=Q5E4MqtKW3r1PC56"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
