--- a/docs/brand.mdx
+++ b/docs/brand.mdx
@@ -16,7 +16,9 @@ The official name is **Open WebUI**.
 - open-webui (typically used for repository or package names)
 
 ### Incorrect Variations (Do NOT use):
+
 - OpenWeb UI
+- OpenWebUI
 - OpenWeb
 - Open Web UI
 - openweb-ui
