--- a/docs/features/auth/scim.mdx
+++ b/docs/features/auth/scim.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_position: 20
-title: "🔐 SCIM 2.0: Automated User Provisioning"
+sidebar_position: 3
+title: "🚀 SCIM 2.0"
 ---
 
 # SCIM 2.0 Support
