--- a/docs/features/auth/sso/index.mdx
+++ b/docs/features/auth/sso/index.mdx
@@ -1,18 +1,7 @@
 ---
-sidebar_position: 19
-title: "🔐 SSO: Federated Authentication Support"
+sidebar_position: 1
+title: "⚡️ SSO (OAuth, OIDC, Trusted Header)"
 ---
-
-# Federated Authentication Support
-
-Open WebUI supports several forms of federated authentication:
-
-1. OAuth2
-    1. Google
-    1. Microsoft
-    1. Github
-    1. OIDC
-1. Trusted Header
 
 :::info
 
