--- a/docs/features/mcp.mdx
+++ b/docs/features/mcp.mdx
@@ -2,7 +2,7 @@
 title: 🔌 MCP (Model Context Protocol)
 ---
 
-Open WebUI supports **MCP (Model Context Protocol)** starting in **v0.6.31**. This page shows how to enable it quickly, harden it for production, and troubleshoot common snags.
+Open WebUI natively supports **MCP (Model Context Protocol)** starting in **v0.6.31**. This page shows how to enable it quickly, harden it for production, and troubleshoot common snags.
 
 > **Audience:** admins and power users configuring external tools
 
