--- a/docs/features/auth/scim.mdx
+++ b/docs/features/auth/scim.mdx
@@ -186,4 +186,4 @@ SCIM works best when combined with SSO (Single Sign-On). A typical setup include
 
 This ensures users are automatically created and can immediately authenticate using their corporate credentials.
 
-For SSO configuration, see the [SSO documentation](https://docs.openwebui.com/features/sso/).
+For SSO configuration, see the [SSO documentation](https://docs.openwebui.com/features/auth/).
