--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -30,7 +30,7 @@ Passionate about open-source AI? [Join our team →](https://careers.openwebui.c
 
 
 
-![Open WebUI Demo](/images/demo.gif)
+![Open WebUI Demo](/images/demo.png)
 
 :::tip
 **Looking for an [Enterprise Plan](https://docs.openwebui.com/enterprise)?** — **[Speak with Our Sales Team Today!](mailto:sales@openwebui.com)**
